# zero-code-cli

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/tetris/: README.md  index.html
examples/tetris/css/: style.css
examples/tetris/js/: board.js  constants.js  game.js  input.js  main.js  renderer.js  score.js  tetromino.js
src/: api.rs  app.rs  config.rs  logger.rs  main.rs  memory.rs  session.rs  tools.rs  ui.rs
src/tools/: shell_unix.rs  shell_windows.rs
