[package]
name = "zero-code-cli"
version = "0.2.0"
edition = "2024"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
unicode-width = "0.2"
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["rt", "macros"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "5"
